--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 08:05:22 2018</p>
+         Last Run: Mon Jul 23 09:23:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 08:05:22 2018</p>
+         Last Run: Mon Jul 23 09:23:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -257,8 +257,8 @@
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
-                        <td>51</td>
+                        <td>3</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -269,10 +269,10 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>32</td>
-                        <td>60</td>
+                        <td>34</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>40</td>
                      </tr>
@@ -281,11 +281,11 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -404,9 +404,9 @@
                "data":[
                  "15",
                  "15",
-                 "4",
-                 "32",
-                 "40"
+                 "3",
+                 "34",
+                 "39"
                ]
              },
              {
@@ -416,8 +416,8 @@
                "data":[
                  "45",
                  "48",
-                 "51",
-                 "60",
+                 "50",
+                 "59",
                  "69"
                ]
              },
@@ -426,7 +426,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "55",
                  "34",
                  "40",
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 08:05:22 2018</p>
+         Last Run: Mon Jul 23 09:23:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,7 +472,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -484,7 +484,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
@@ -508,23 +508,23 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>15</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "25",
                  "26",
                  "26",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "25",
                  "26",
                  "26",
-                 "26"
+                 "27"
                ]
              }
            ]
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "30",
+                 "36",
+                 "29",
                  "26",
-                 "25",
-                 "24"
+                 "24",
+                 "23"
                ]
              },
              {
@@ -667,8 +667,8 @@
                  "0",
                  "30",
                  "31",
-                 "32",
-                 "33"
+                 "31",
+                 "32"
                ]
              }
            ]
