--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 11:05:33 2018</p>
+         Last Run: Mon Jul 23 12:05:28 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,20 +33,20 @@
                         <td>Chance of Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>77</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>19</td>
                         <td>NNE</td>
-                        <td>76</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>45</td>
-                        <td>83</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>47</td>
+                        <td>77</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNE</td>
@@ -55,26 +55,26 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>47</td>
-                        <td>85</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>46</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>18</td>
                         <td>N</td>
-                        <td>89</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>40</td>
-                        <td>92</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>38</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>88</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,9 +120,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "13",
-                 "13",
-                 "11"
+                 "14",
+                 "14",
+                 "12"
                ]
              },
              {
@@ -132,9 +132,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "13",
-                 "13",
-                 "11"
+                 "14",
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "48",
-                 "45",
                  "47",
-                 "40"
+                 "47",
+                 "46",
+                 "38"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "83",
-                 "85",
-                 "92"
+                 "77",
+                 "80",
+                 "89"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
+                 "66",
                  "84",
-                 "89",
-                 "88"
+                 "91",
+                 "94"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 11:05:33 2018</p>
+         Last Run: Mon Jul 23 12:05:28 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -250,38 +250,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>30</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>36</td>
                         <td>58</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>73</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>62</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>67</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +325,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "18",
                  "17",
                  "15"
                ]
@@ -336,7 +336,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "18",
                  "17",
                  "15"
                ]
@@ -389,9 +389,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "30",
-                 "32",
-                 "18"
+                 "36",
+                 "31",
+                 "16"
                ]
              },
              {
@@ -409,9 +409,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "62",
-                 "67"
+                 "58",
+                 "49",
+                 "59"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 11:05:33 2018</p>
+         Last Run: Mon Jul 23 12:05:28 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -453,11 +453,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -465,43 +465,43 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>24</td>
-                        <td>57</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>39</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>38</td>
-                        <td>67</td>
+                        <td>41</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -553,8 +553,8 @@
                "data":[
                  "21",
                  "20",
-                 "19",
-                 "17",
+                 "20",
+                 "18",
                  "15"
                ]
              },
@@ -566,8 +566,8 @@
                "data":[
                  "21",
                  "20",
-                 "19",
-                 "17",
+                 "20",
+                 "18",
                  "15"
                ]
              }
@@ -624,8 +624,8 @@
                  "15",
                  "15",
                  "0",
-                 "24",
-                 "38"
+                 "39",
+                 "41"
                ]
              },
              {
@@ -633,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "46",
+                 "43",
+                 "45",
                  "48",
-                 "57",
-                 "67"
+                 "55",
+                 "66"
                ]
              },
              {
@@ -645,10 +645,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "54",
-                 "31",
-                 "38",
+                 "52",
+                 "52",
+                 "35",
+                 "50",
                  "50"
                ]
              }
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 11:05:33 2018</p>
+         Last Run: Mon Jul 23 12:05:28 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -691,7 +691,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -703,7 +703,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
@@ -717,19 +717,19 @@
                         <td>15</td>
                         <td>26</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>15</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>31</td>
                      </tr>
@@ -739,9 +739,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>15</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>32</td>
                      </tr>
@@ -792,7 +792,7 @@
                  "23",
                  "25",
                  "26",
-                 "26",
+                 "27",
                  "27"
                ]
              },
@@ -805,7 +805,7 @@
                  "23",
                  "25",
                  "26",
-                 "26",
+                 "27",
                  "27"
                ]
              }
@@ -871,11 +871,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "29",
+                 "37",
+                 "30",
                  "26",
-                 "24",
-                 "23"
+                 "25",
+                 "24"
                ]
              },
              {
