--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 12:05:28 2018</p>
+         Last Run: Mon Jul 23 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,34 +31,34 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>47</td>
-                        <td>77</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>43</td>
+                        <td>73</td>
                         <td>2</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NNE</td>
                         <td>66</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>47</td>
-                        <td>77</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>45</td>
+                        <td>75</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNE</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>46</td>
-                        <td>80</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>50</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>18</td>
                         <td>N</td>
@@ -69,10 +69,10 @@
                         <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>38</td>
-                        <td>89</td>
+                        <td>40</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>N</td>
                         <td>94</td>
                      </tr>
@@ -119,9 +119,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "16",
                  "15",
-                 "14",
-                 "14",
+                 "13",
                  "12"
                ]
              },
@@ -131,9 +131,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "16",
                  "15",
-                 "14",
-                 "14",
+                 "13",
                  "12"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "47",
-                 "47",
-                 "46",
-                 "38"
+                 "43",
+                 "45",
+                 "50",
+                 "40"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "77",
-                 "80",
-                 "89"
+                 "73",
+                 "75",
+                 "81",
+                 "88"
                ]
              },
              {
@@ -209,7 +209,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "66",
-                 "84",
+                 "83",
                  "91",
                  "94"
                ]
@@ -223,12 +223,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 12:05:28 2018</p>
+         Last Run: Mon Jul 23 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -250,38 +251,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>36</td>
-                        <td>58</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>37</td>
+                        <td>60</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>31</td>
-                        <td>60</td>
+                        <td>34</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>49</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>16</td>
-                        <td>68</td>
+                        <td>15</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>N</td>
-                        <td>59</td>
+                        <td>NNE</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +326,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "17",
                  "17",
                  "15"
                ]
@@ -336,7 +337,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "17",
                  "17",
                  "15"
                ]
@@ -389,9 +390,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
-                 "31",
-                 "16"
+                 "37",
+                 "34",
+                 "15"
                ]
              },
              {
@@ -399,9 +400,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
                  "60",
-                 "68"
+                 "63",
+                 "71"
                ]
              },
              {
@@ -409,9 +410,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "49",
-                 "59"
+                 "63",
+                 "52",
+                 "60"
                ]
              }
            ]
@@ -428,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 12:05:28 2018</p>
+         Last Run: Mon Jul 23 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -453,11 +454,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -465,9 +466,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>52</td>
                      </tr>
@@ -477,7 +478,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -486,10 +487,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>39</td>
-                        <td>55</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -500,8 +501,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>41</td>
-                        <td>66</td>
+                        <td>42</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -554,7 +555,7 @@
                  "21",
                  "20",
                  "20",
-                 "18",
+                 "17",
                  "15"
                ]
              },
@@ -567,7 +568,7 @@
                  "21",
                  "20",
                  "20",
-                 "18",
+                 "17",
                  "15"
                ]
              }
@@ -625,7 +626,7 @@
                  "15",
                  "0",
                  "39",
-                 "41"
+                 "42"
                ]
              },
              {
@@ -633,11 +634,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "45",
-                 "48",
-                 "55",
-                 "66"
+                 "44",
+                 "46",
+                 "49",
+                 "58",
+                 "68"
                ]
              },
              {
@@ -645,7 +646,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
+                 "53",
                  "52",
                  "35",
                  "50",
@@ -666,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 12:05:28 2018</p>
+         Last Run: Mon Jul 23 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -691,9 +692,9 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>0</td>
                      </tr>
@@ -705,7 +706,7 @@
                         <td>15</td>
                         <td>30</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>30</td>
                      </tr>
@@ -727,7 +728,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>15</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -871,10 +872,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
+                 "36",
                  "30",
                  "26",
-                 "25",
+                 "24",
                  "24"
                ]
              },
